Fix 'C# importer crashes on enums when they're used before being defined'.

Unknown types are created as UMLClassifier and not as UMLEnum, which is required.

BUG:375224
FIXED-IN:2.12.2 (KDE Applications 16.12.2)